unpackaged/objects/copadoconnect__Copado_Integration__c.object
<CustomObject>
	<fields>
		<fullName>copadoconnect__Connection_Status__c</fullName>
		<inlineHelpText>The status of the named credential connection. Draft = Created and Saved, Connected = You have successfully authorized and connected to a Third Party application, Failed = Failed connection due to configuration or authorization issues.</inlineHelpText>
		<label>Connection Status</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Draft</fullName>
					<default>true</default>
					<label>Draft</label>
				</value>
				<value>
					<fullName>Connected</fullName>
				</value>
				<value>
					<fullName>Failed</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadoconnect__Description__c</fullName>
		<label>Description</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadoconnect__External_Project_ID__c</fullName>
		<label>External Project ID</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__External_Project_Key__c</fullName>
		<label>External Project Key</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Integration_Status__c</fullName>
		<inlineHelpText>This represents the status of the integration and the syncing of records.</inlineHelpText>
		<label>Integration Status</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Inactive</fullName>
					<default>true</default>
					<label>Inactive</label>
				</value>
				<value>
					<fullName>Active</fullName>
				</value>
				<value>
					<fullName>Active with Errors</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadoconnect__Named_Credential__c</fullName>
		<label>Named Credential</label>
		<length>120</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Organization__c</fullName>
		<label>Organization</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Project__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Project</label>
		<referenceTo>copado__Project__c</referenceTo>
		<relationshipLabel>Copado Integrations</relationshipLabel>
		<relationshipName>Copado_Integrations</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Provider__c</fullName>
		<label>Provider</label>
		<required>true</required>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>JIRA</fullName>
				</value>
				<value>
					<fullName>ServiceNow</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<label>Copado Integration</label>
	<listViews>
		<fullName>copadoconnect__All</fullName>
		<columns>NAME</columns>
		<columns>copadoconnect__Provider__c</columns>
		<columns>copadoconnect__Project__c</columns>
		<columns>copadoconnect__Description__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<listViews>
		<fullName>copadoconnect__All_Copado_Integrations</fullName>
		<columns>NAME</columns>
		<columns>copadoconnect__Provider__c</columns>
		<columns>copadoconnect__Project__c</columns>
		<columns>copadoconnect__Connection_Status__c</columns>
		<columns>copadoconnect__Integration_Status__c</columns>
		<filterScope>Everything</filterScope>
		<label>All Copado Integrations</label>
	</listViews>
	<nameField>
		<label>Connection Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Copado Integrations</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>